[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-linearmcp"
version = "0.5.0"
description = "OhMyLinearMCP - unified Linear MCP (local-fast reads + official fallback/writes) on macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "everything-chalna" }
]
keywords = ["linear", "mcp", "cache", "indexeddb", "macos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "brotli>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/everything-chalna/oh-my-linearmcp"
Repository = "https://github.com/everything-chalna/oh-my-linearmcp"
Issues = "https://github.com/everything-chalna/oh-my-linearmcp/issues"

[project.scripts]
oh-my-linearmcp = "linear_mcp_fast:main"
linear-mcp-fast = "linear_mcp_fast:main"

[tool.setuptools.packages.find]
where = ["src", "vendor/ccl_chromium_reader", "vendor/ccl_simplesnappy"]

[tool.setuptools.package-dir]
"" = "src"
"ccl_chromium_reader" = "vendor/ccl_chromium_reader/ccl_chromium_reader"
"ccl_chromium_reader.serialization_formats" = "vendor/ccl_chromium_reader/ccl_chromium_reader/serialization_formats"
"ccl_chromium_reader.storage_formats" = "vendor/ccl_chromium_reader/ccl_chromium_reader/storage_formats"
"ccl_simplesnappy" = "vendor/ccl_simplesnappy/ccl_simplesnappy"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
